[package]
name = "rdp-rs"
version = "0.1.0"
authors = [
    "Sylvain Peyrefitte <citronneur@gmail.com>",
    "cty123 <ctychen2216@gmail.com>",
]
repository = "https://github.com/cty123/rdp-rs"
readme = "README.md"
keywords = ["rdp", "security", "network", "windows"]
categories = ["network"]
license = "MIT"
documentation = "https://docs.rs/rdp-rs"
edition = "2021"

[lib]
name = "rdp"
path = "src/lib.rs"

[[bin]]
name = "mstsc-rs"
path = "src/bin/mstsc-rs.rs"
required-features = ["mstsc-rs"]

[features]
# The reason we do this is because doctests don't get cfg(test)
# See: https://github.com/rust-lang/cargo/issues/4669
integration = []
mstsc-rs = ["hex", "winapi", "minifb", "clap", "libc"]

[dependencies]
native-tls = "0.2.8"
byteorder = "1.4.3"
bufstream = "0.1.4"
indexmap = "1.8.0"
yasna = "0.5.0"
md4 = "0.10.0"
hmac = "0.12.0"
md-5 = "0.10.0"
rand = "0.8.4"
num-bigint = "0.4.3"
x509-parser = "0.12.0"
num_enum = "0.5.6"
tokio = { version = "1.16.1", features = ["io-util"] }
tokio-stream = "0.1.8"
bytes = "1.1.0"
async-trait = "0.1.52"

# for mtsc-rs
hex = { version = "^0.4", optional = true }
winapi = { version = "^0.3", features = ["winsock2"], optional = true }
minifb = { version = "^0.15", optional = true }
clap = { version = "^2.33", optional = true }
libc = { version = "^0.2", optional = true }
